# bitsh

./: .coafile  .coveragerc  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  tox.ini
.github/: CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md
bitsh/: log.py  main.py
bitsh/cli/: cli.py
bitsh/tests/: test_bitsh.py
docs/source/: conf.py  index.rst  installation.rst
requirements/: _base.txt
